2006-02-16  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by John.

        - Fixed <rdar://problem/4448534> TOT REGRESSION: crash in KJS::
        Bindings::Instance::deref when leaving page @ gigaom.com

        * bindings/c/c_instance.cpp:
        (KJS::Bindings::CInstance::~CInstance): Since we cache the class object
        globally, we shouldn't delete it, so don't.

2006-02-16  Timothy Hatcher  <timothy@apple.com>

        Added -Wno-deprecated-declarations to all the ObjC binding files to prevent deprecation
        warnings. Using <rdar://problem/4448350> to track this.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * bindings/objc/objc_jsobject.h: Removed empty file.
        * bindings/objc/objc_jsobject.mm: Removed empty file.

2006-02-16  Tim Omernick  <timo@apple.com>

        Reviewed by Geoff.

        <rdar://problem/4428609> Flash Player 8.0.22 can crash Safari (and WebKit apps) with
        javascript disabled (7015)

        * bindings/NP_jsobject.cpp:
        (_NPN_CreateNoScriptObject):
        Returns an NPObject which is not bound to a JavaScript object.  This kind of NPObject
        can be given to a plugin as the "window script object" when JavaScript is disabled.
        The object has a custom NPClass, NPNoScriptObjectClass, which has no defined methods.
        Because of this, none of the NPN_* functions called by the plugin on this "no script
        object" will cause entry into JavaScript code.
        (_NPN_InvokeDefault):
        Make sure the NPVariant is filled before returning from this function.  This never
        mattered before because we never reached this case, having only created NPObjects of
        the class NPScriptObjectClass.
        (_NPN_Invoke):
        ditto
        (_NPN_Evaluate):
        ditto
        (_NPN_GetProperty):
        ditto

        * bindings/NP_jsobject.h:
        Declared _NPN_CreateNoScriptObject().

2006-02-16  Darin Adler  <darin@apple.com>
