@@ -1,3 +1,14 @@
+2006-02-18  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej.
+
+        - http://bugzilla.opendarwin.org/show_bug.cgi?id=7345
+          add insert and remove to KXMLCore::Vector
+
+        * kxmlcore/Vector.h: Added "moveOverlapping", which is used in both
+        insert and remove to slide elements within the vector. Also added
+        "insert" and "remove" functions.
+
 2006-02-16  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by John.
